# StockholmPriceIntelligence

./: .dvcignore  .gitignore  README.md  dvc.yaml  params.json  params_full.json  render.yaml
.github/workflows/: ci.yml  deploy.yml
backend/: .dockerignore  .gitignore  Dockerfile  pyproject.toml
backend/models/: model_scb_v1.pkl  model_scb_v2.pkl  model_v1.pkl  model_v3.pkl  preprocessor_full_v1.pkl  preprocessor_scb_v2.pkl  preprocessor_v2.pkl
backend/reports/metrics/: latest.json  run_20260212T154449Z_baseline_v1.json  run_20260212T154506Z_rf_v2.json  run_20260212T154517Z_hgb_v3.json  run_20260212T154620Z_baseline_v1.json  run_20260212T162356Z_baseline_scb_v1.json
backend/reports/metrics_full/: run_20260216T151820Z_rf_full_v1.json
backend/scripts/: fetch_scb_api.py  make_synth_data.py  prepare_data.py  run_api_full.ps1  run_api_scb.ps1  run_api_scb.sh  run_experiments.py
backend/src/spi_api/: logging_utils.py  main.py  model_loader.py  schemas.py
backend/src/spi_data/: jsonstat2.py  pcaxis.py  prepare.py
backend/src/spi_train/: config.py  data.py  metrics.py  models.py  preprocessing.py  training.py
backend/tests/: test_predict.py
frontend/: README.md
frontend/src/app/: PriceTrendChart.tsx  layout.tsx  page.tsx
